--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.pythonPath": "D:\\Python\\python.exe"
+    "python.pythonPath": "C:\\Users\\jesus\\AppData\\Local\\Programs\\Python\\Python39\\python.exe"
 }
